--- a/mod/thmod/localisation/english/aquatics_l_english.yml
+++ b/mod/thmod/localisation/english/aquatics_l_english.yml
@@ -3,7 +3,7 @@
  trait_aquatic:0 "อยู่ใต้น้ำ"
  trait_aquatic_desc:0 "§LThis species is perfectly adapted to living in the depths of the ocean. However, on dry land, it is like a fish out of water.§!\n"
  trait_aquatic_tooltip:2 "การใช้งานที่อยู่อาศัยบนดาว §Yมหาสมุทร§! และ §Yที่อยู่อาศัยที่มีน้ำท่วม§!: §G-10%§!\nผลผลิตอาหาร พลังงาน และแร่บนดาว §Yมหาสมุทร§!: §G+10%§!\nการใช้งานที่อยู่อาศัยบนดาวที่ ไม่-§Yเปียกชื้น§!: §R+30%§!\nการอยู่อาศัยได้บนดาวที่ ไม่-§Yเปียกชื้น§!: §R-20%§!\n\n การยกระดับ §H$ap_hydrocentric$§! จะขยายผลกระทบของคุณลักษณะนี้"
- trait_aquatic_remove_evolutionary_mastery:1 "§RRequires §Y$tr_genetics_resequencing$§! Tradition to remove.§!"
+ trait_aquatic_remove_evolutionary_mastery:1 "§Rต้องการวัฒนธรรม §Y$tr_genetics_resequencing$§! เพื่อลบ§!"
  trait_aquatic_remove_hydrocentric:0 "§RCannot remove §Y$trait_aquatic$§! trait after taking §Y$ap_hydrocentric$§! Ascension Perk.§!"
  leader_trait_aquatic_admiral:0 "อยู่ใต้น้ำ"
  leader_trait_aquatic_admiral_desc:0 "The ship adaptations needed to make this admiral feel at home have the fortuitous side-effect of making the fleet's hull stronger and more durable."
@@ -217,5 +217,5 @@
  job_pearl_diver_plural:0 "นักล่าไข่มุก"
  job_pearl_diver_desc:0 "Concerning cultivation and farming more than diving, these specialists still bring back a large variety of treasures from the depths."
  mod_job_pearl_diver_add:0 "งานนักล่าไข่มุก"
- job_pearl_diver_effect_desc:1 "£job_pearl_diver£ $job_pearl_diver_plural$ turn $r_food$ and $r_minerals$ into £consumer_goods£ §Y$consumer_goods$§! and £trade_value£ §Y$TRADE_VALUE$§!"
+ job_pearl_diver_effect_desc:1 "£job_pearl_diver£ $job_pearl_diver_plural$ เปลี่ยน $r_food$ และ $r_minerals$ เป็น £consumer_goods£ §Y$consumer_goods$§! และ £trade_value£ §Y$TRADE_VALUE$§!"
  civic_tooltip_not_anglers:0 "ไม่มีพลเมือง §Y$civic_anglers$§!"
