--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -6,7 +6,7 @@
  count_envoy_trigger:1 "จำนวนทูต$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_envoy_all_trigger:0 "$IS_ALL_NOT$ Envoys fulfill the following conditions"
  IN_BREACH_LIST:0 "§R$IN_BREACH$: $LIST|H$§!"
- TRIGGER_HAS_ENVOY_TASK_WITH:1 " with $WITH$"
+ TRIGGER_HAS_ENVOY_TASK_WITH:1 " และ $WITH$"
  TRIGGER_HAS_ENVOY_TASK_IMPROVE_RELATIONS:1 "Is improving relations"
  TRIGGER_HAS_ENVOY_TASK_IMPROVE_RELATIONS_NOT:1 "Is NOT improving relations"
  TRIGGER_HAS_ENVOY_TASK_HARM_RELATIONS:1 "Is harming relations"
@@ -53,12 +53,12 @@
  UNTIL_CANCELLED:0 "จนกว่าจะยกเลิก"
  HAS_ENVOY_COOLDOWN:0 "Can be reassigned"
  HAS_NOT_ENVOY_COOLDOWN:0 "Cannot be reassigned"
- SYSTEM_TRADE_VALUE_LESS_THAN:1 "$TYPE$ NOT $COMPARE$ $VAL|0Y$"
+ SYSTEM_TRADE_VALUE_LESS_THAN:1 "$TYPE$ ไม่ $COMPARE$ $VAL|0Y$"
  SYSTEM_TRADE_VALUE_AT_LEAST:1 "$TYPE$ $COMPARE$ $VAL|0Y$"
- TOTAL_TRADE:0 "Trade Value"
- COLLECTED_TRADE:0 "Collected Trade Value"
- UNCOLLECTED_TRADE:0 "Uncollected Trade Value"
- SOLAR_SYSTEM:0 "Solar System"
+ TOTAL_TRADE:0 "มูลค่าการค้า"
+ COLLECTED_TRADE:0 "มูลค่าการค้าที่เก็บมาแล้ว"
+ UNCOLLECTED_TRADE:0 "มูลค่าการค้าที่ยังไม่ได้เก็บ"
+ SOLAR_SYSTEM:0 "ระบบสุริยะ"
  any_pop_faction_trigger:0 "Any Pop Faction"
  count_pop_faction_trigger:1 "จำนวนกลุ่มประชากร$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_pop_faction_all_trigger:0 "$IS_ALL_NOT$ Pop Factions fulfill the following conditions"
@@ -72,7 +72,7 @@
  IS_NOT_FACTION_TYPE_TRIGGER:0 "Is NOT faction type $TYPE$"
  NOT_XENO_COMPATIBILITY_ENABLED_TRIGGER:0 "ปิดความเข้ากันได้ของชาวต่างดาว"
  XENO_COMPATIBILITY_ENABLED_TRIGGER:0 "เปิดความเข้ากันได้ของชาวต่างดาว"
- ADD_DEPOSIT_EFFECT_FULL:0 "Add $DEPOSIT|Y$ to $PLANET|Y$, with the following result:\n$EFFECT$\n"
+ ADD_DEPOSIT_EFFECT_FULL:0 "เพิ่ม $DEPOSIT|Y$ ไปที่ $PLANET|Y$ โดยมีผลดังนี้:\n$EFFECT$\n"
  HAS_SPECIAL_PROJECT:0 "มีโครงการพิเศษ $SPECIAL_PROJECT$"
  HAS_NOT_SPECIAL_PROJECT:0 "ไม่มีโครงการพิเศษ $SPECIAL_PROJECT$"
  HAS_COMPLETED_SPECIAL_PROJECT:0 "เสร็จสิ้นโครงการพิเศษ $SPECIAL_PROJECT$"
