--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -54,7 +54,7 @@
  arcane_generator_upkeep_desc:0 "The §Y$d_arcane_generator$§! will adapt so it is able to supply the upkeep for this segment."
  d_tree_of_life_home:0 "ต้นไม้แห่งชีวิต"
  d_tree_of_life_home_desc:0 "The Great Tree has sheltered and supported the Hive for untold generations."
- d_tree_of_life_colony:2 "Tree of Life Sapling"
+ d_tree_of_life_colony:2 "หน่อต้นอ่อนของต้นไม้แห่งชีวิต"
  d_tree_of_life_colony_desc:1 "An offshoot of the Great Tree, transplanted here by the Hive. It will take millennia for it to fully mature."
  d_lithoid_crater:0 "Massive Crater"
  d_lithoid_crater_desc:0 "The impact site of the meteorite which brought Lithoids to this planet."
@@ -191,7 +191,7 @@
  IS_NOT_NUM_COUNCIL_POSITIONS:1 "Number of $GALACTIC_COUNCIL$ positions is NOT $COMPARE$ $NUM_COMPARE$"
  IS_COMMUNITY_RANK:1 "$GALACTIC_COMMUNITY$ rank is $COMPARE$ $NUM_COMPARE$"
  IS_NOT_COMMUNITY_RANK:1 "$GALACTIC_COMMUNITY$ rank is NOT $COMPARE$ $NUM_COMPARE$"
- IS_COMMUNITY_FORMED:0 "The $GALACTIC_COMMUNITY$ has been formed"
+ IS_COMMUNITY_FORMED:0 "$GALACTIC_COMMUNITY$ ถูกก่อตั้งขึ้นแล้ว"
  IS_NOT_COMMUNITY_FORMED:0 "The $GALACTIC_COMMUNITY$ has NOT been formed"
  IS_COUNCIL_ESTABLISHED:0 "The $GALACTIC_COUNCIL$ has been established"
  IS_NOT_COUNCIL_ESTABLISHED:0 "The $GALACTIC_COUNCIL$ has NOT been established"
@@ -1721,7 +1721,7 @@
  name_list_LITH_desc:0 "§YLeaders:§! Huktt Okk Obett'Err, Meket Orr Kerekkt\n§YShips:§! Potrakk, Trok Vrek\n§YFleets:§! Trokk Pret'Akrr, Trokk Beret'Akrr\n§YColonies:§! Rekket'Otarr, Vaktt'Tekt"
  origin_galactic_doorstep:0 "ประตูกาแล็กติก"
  origin_galactic_doorstep_desc:1 "This civilization has a dormant Gateway in their home system - potential technological benefit, or a looming menace?"
- origin_tooltip_galactic_doorstep_effects:2 "- Start with a dormant §HGateway§! in your home system."
+ origin_tooltip_galactic_doorstep_effects:2 "- เริ่มต้นด้วย §Hเกตเวย์§! ในระบบดาวบ้านเกิดของคุณ"
  START_SCREEN_GALACTIC_DOORSTEP:0 "The mysterious construct in our solar system was discovered a few hundred years ago. Due to its dark, metallic properties the artifact was named §HThe Black Crown§!, and its majestic presence had profound effect on our society - it unified our people in both spirit and pursuit.\n\nSpace flight became the highest priority of our scientific community, and the eager quest for this technology brought with it a series of other beneficial discoveries.\n\nThe Black Crown turned out to be dormant, but we learned an important lesson; it's not the destination that matters - it's the journey. And now - thanks to the beckoning of the Black Crown - our species has the means by which we can visit the stars."
  START_SCREEN_GALACTIC_DOORSTEP_MACH:0 "The mysterious construct in our solar system was discovered a few hundred years ago. Due to its dark, metallic properties the artifact was designated §HThe Black Crown§!, and its distinct presence had profound effect on our operations - gathering more data became imperative.\n\nSpace flight became the highest priority of our research and development sub-routines, and the process of reaching this alien technology brought with it a series of other beneficial discoveries that were consecutively implemented.\n\nThe Black Crown turned out to be dormant, but the improvements and upgrades applied in order to reach it did increase our general output, and we now have the capacity to visit the stars."
  START_SCREEN_GALACTIC_DOORSTEP_HIVE:0 "The mysterious construct in our solar system was discovered a few hundred years ago. Due to its dark, metallic properties the artifact was named §HThe Black Crown§!, and its majestic presence had profound effect on us - finding out its true nature became paramount.\n\nSpace flight became the highest priority, and the eager quest for this technology brought with it a series of other beneficial discoveries that improved and honed us.\n\nThe Black Crown turned out to be dormant, but it was not a journey done in vain. We now have the means to grow far bigger, reach much further, than ever before."
@@ -2260,7 +2260,7 @@
  origin.57.E.icon_tooltip:0 "Our federation will become a §Y$trade_federation$§!"
  origin_hegemon:0 "การครอบงำจักรวรรดิทางอ้อม (อธิกะ)"
  origin_hegemon_desc:0 "อารยธรรมนี้สร้างการติดต่อกับเพื่อนบ้านต่างดาวในระยะแรก ในช่วงหนึ่งศตวรรษที่ผ่านมา พวกเขาค่อยๆวางแผนให้เกิดสหภาพระหว่างดวงดาวซึ่งพวกเขาจะมีบทบาทที่โดดเด่น"
- origin_tooltip_hegemon_effects:1 "- Start as the leader of a §HHegemony§! federation with two additional members.\n- Members will occupy any Guaranteed Habitable Worlds slots near your home system.\n- Start with §HThe Federation§! tradition unlocked."
+ origin_tooltip_hegemon_effects:1 "- เริ่มต้นด้วยการเป็นผู้นำของสหพันธ์ประเภท §Hมหาอำนาจ§! และมาพร้อมกับสมาชิกอีก 2 จักรวรรดิ\n- โดยสมาชิกจะครอบครองดาวที่อยู่อาศัยได้ใกล้ระบบดาวบ้านของคุณ\n- ปลดล็อกวัฒนธรรม §Hสหพันธ์§! มาให้ตั้งแต่เริ่มเกม"
  origin_tooltip_hegemon_npc_effects:0 "- เริ่มต้นในฐานะผู้นำของ §Hสหพันธ์มหาอำนาจ§! มาพร้อมกับสมาชิกอีกสองจักรวรรดิ"
  START_SCREEN_HEGEMON:0 "Decades ago, when our first crude sublight probes visited the star systems neighboring our own, we discovered the presence of two distinct alien civilizations. Like us, they were on the verge of developing practical interstellar travel, but their governments were weak and disorganized.\n\nRecognizing that their strength would add to our own, we began to gradually push for a political union under our supervision that would unite our three civilizations. There was resistance at first, but eventually the benefits of sharing in our leadership and ambition became too obvious for even them to ignore. A new order had been established."
  origin_hegemon_npc:0 "Hegemon Subordinate"
