--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -2590,9 +2590,9 @@
  elliptical:0 "รูปไข่หรือทรงรี"
  ring:0 "วงแหวน"
  spiral_2:0 "เกลียว (2 แขน)"
- spiral_3:0 "Spiral (3 Arms)"
+ spiral_3:0 "เกลียว (3 แขน)"
  spiral_4:0 "เกลียว (4 แขน)"
- spiral_6:0 "Spiral (6 Arms)"
+ spiral_6:0 "เกลียว (6 แขน)"
  bar:0 "Barred Spiral"
  starburst:0 "Starburst"
  cartwheel:0 "Cartwheel"
@@ -5375,7 +5375,7 @@
  CMP_WEAPON_TT_DMG_REDUCED:0 "§Rทำความเสียหาย $TYPE$ -$VALUE|%0$§!"
  CMP_WEAPON_TT_DMG_INCREASED:0 "§Gทำความเสียหาย $TYPE$ +$VALUE|%0$§!"
  CMP_TT_MISSILE_STATS:3 "§Hจรวดมิสไซล์:§!\n    HP: $HEALTH|Y0$\n    เกราะ: $ARMOR|Y0$\n    หลบหลีก: $EVASION|Y%0$\n    ความเร็ว: $SPEED|Y0$\n    ระยะกำหนดเป้าหมายใหม่: $RT_RANGE|Y0$"
- CMP_TT_SIZE_DAMAGE_FACTOR:0 "This weapon deals additional multiplicative damage based on §G$VALUE|%0$§! of the target's Ship Size."
+ CMP_TT_SIZE_DAMAGE_FACTOR:0 "อาวุธนี้สร้างความเสียหายแบบทวีคูณเพิ่มเติมตามขนาดยานเป้าหมาย §G$VALUE|%0$§!"
  CMP_WEAPON_TT_ARMOR_PENETRATION:2 "§GIgnores $VALUE|%0$ of Armor§!"
  CMP_WEAPON_TT_SHIELD_PENETRATION:2 "§Gเจาะโล่พลังงาน +$VALUE|%0$§!"
  CMP_WEAPON_TT_SHIELD_DMG_REDUCED:2 "§Rทำความเสียหายกับโล่พลังงาน -$VALUE|%0$§!"
@@ -8268,17 +8268,17 @@
  civic_hive_memorialist_desc:0 "The Hive Mind pays special regard to the passing of other sapient entities as a means of centering its own, undying self."
  civic_machine_memorialist:0 "$civic_hive_memorialist$"
  civic_machine_memorialist_desc:0 "The Machine Intelligence fine-tunes its understanding of core protocols through careful analysis of entropy in the wider universe. Redundancy is data, on the path to greater resilience."
- civic_crafters:0 "Masterful Crafters"
+ civic_crafters:0 "นักคราฟต์ผู้เชี่ยวชาญ"
  civic_crafters_desc:0 "A penchant for meticulous crafting lies at the heart of this society. Deft appendages and keen sensory organs aid them in creating truly wondrous treasures even in the most basic of trades."
  civic_pleasure_seekers:0 "ผู้แสวงหาความสุข"
  civic_pleasure_seekers_desc:0 "This society rejoices in its own perfection. Those who are elevated by their privileged social structure have surrendered to a culture which glorifies pleasure and entertainment, regardless of a cost typically borne by others."
- civic_corporate_hedonism:0 "Corporate Hedonism"
+ civic_corporate_hedonism:0 "องค์กร Hedonism"
  civic_corporate_hedonism_desc:0 "Work is where you want to be. The citizens of this Megacorporation happily pledge allegiance - and all their free time - to their employers in exchange for lavish corporate comforts."
  civic_corporate_crafters:0 "Mastercraft Inc."
  civic_corporate_crafters_desc:0 "This megacorporation has focused its production pipeline solely on goods of the highest quality and profit margins, creating and marketing stunning products with artistry and craft."
  civic_pompous_purists:0 "เอาแต่ใจตัวเอง"
  civic_pompous_purists_desc:0 "A society so utterly convinced of their own superiority, that any attempt at diplomacy not initated by themselves will be utterly ignored."
- civic_ascensionists:0 "Ascensionists"
+ civic_ascensionists:0 "นักยกระดับ"
  civic_ascensionists_desc:0 "The ultimate goal of this empire is to ascend to ever greater levels of fulfillment."
  civic_corporate_ascensionists:0 "$civic_ascensionists$"
  civic_corporate_ascensionists_desc:0 "$civic_ascensionists_desc$"
@@ -8295,13 +8295,13 @@
  civic_tooltip_agrarian_idyll_start:0 "- §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§! ให้ £housing£ §Yที่อยู่อาศัย§! เพิ่ม §G1§!\n- §Yเขตเมือง§! ลด £housing£ §Yที่อยู่อาศัย§! ลง §R1§!\n- ทุกๆ §Y4§! §Yเขตเกษตรกรรม§! จะเพิ่ม §G1§! £building£ §Yช่องก่อสร้าง§!\n"
  civic_tooltip_agrarian_idyll_effects:8 "$civic_tooltip_agrarian_idyll_start$£job_farmer£ §Y$job_farmer_plural$§! ยังผลิต §G2§! £amenities£ §Yความอยู่ดีกินดี§!"
  civic_tooltip_agrarian_anglers_effects:0 "$civic_tooltip_agrarian_idyll_start$£job_farmer£ §Y$job_farmer_plural$§!, £job_angler£ §Y$job_angler_plural$§! และ £job_pearl_diver£ §Y$job_pearl_diver_plural$§! ยังผลิต §G2§! £amenities£ §Yความอยู่ดีกินดี§!"
- civic_tooltip_mechanists_effects:10 "เริ่มต้นด้วยประชากรหุ่นยนต์ £pop£ 8 และด้วยเทคโนโลยีกับโครงสร้างพื้นฐานเพื่อสร้างเพิ่ม\n- $mod_planet_pops_robotics_upkeep_mult$: §G-5%§!\n"
- civic_tooltip_shared_burden_effects:5 "Allows §Y$living_standard_shared_burden$§! Living Standard, under which all £pop£ Pops have moderate £consumer_goods£ §Y$consumer_goods$§! Upkeep regardless of §YStrata§!\nDisables the use of most other §YLiving Standards§!\nGrants access to the £building£ §Y$holding_communal_housing_outreach$§! Holding\nDoubles all £unity£ §YUnity§! gained from the Egalitarian Faction\n"
+ civic_tooltip_mechanists_effects:10 "- เริ่มต้นด้วยประชากรหุ่นยนต์ £pop£ 8 และด้วยเทคโนโลยีกับโครงสร้างพื้นฐานเพื่อสร้างเพิ่ม\n- $mod_planet_pops_robotics_upkeep_mult$: §G-5%§!\n"
+ civic_tooltip_shared_burden_effects:5 "- มีมาตรฐานความเป็นอยู่แบบ §Y$living_standard_shared_burden$§! ที่จะส่งผลให้ £pop£ ประชากรทั้งหมดมีการบำรุงรักษาที่เป็น £consumer_goods£ §Y$consumer_goods$§! ในระดับปานกลางโดยไม่คำนึงถึง §Yชนชั้น§!\n- ไม่สามารถใช้งาน §Yมาตรฐานความเป็นอยู่§! แบบอื่นๆเป็นส่วนใหญ่ได้\n- ให้สิทธิ์เข้าถึงสิ่งปลูกสร้าง £building£ §Y$holding_communal_housing_outreach$§!\n- ได้รับ £unity£ §Yเอกภาพ§! จากกลุ่มการเมือง(ความเสมอภาค)เป็นสองเท่า\n"
  civic_tooltip_syncretic_evolution_effects:6 "- เริ่มเกมด้วย 12 £pop£ ประชากร ที่อยู่ใต้บังคับบัญชา หรือเป็นเผ่าพันธุ์อื่นๆ"
  civic_tooltip_fanatic_purifiers_effects:14 "- ไม่สามารถมีส่วนร่วมใน §Yการทูต§! กับเผ่าพันธุ์อื่น!\n- ไม่สามารถเข้าถึง §Yตลาดกาแล็กติก§! ได้\n- มีข้ออ้าง §Y'การชำระล้าง'§! เพื่อทำสงครามกับเผ่าพันธุ์อื่น\n- §Yประชากรต่างดาว§! จะถูกกำจัด\n- ได้รับ £unity£ §Yเอกภาพ§! จากการกำจัด £pop£ ประชากรต่างดาว\n- อาจใช้การทิ้งระเบิดแบบ §Y$bombardment_armageddon$§!\n"
  civic_tooltip_devouring_swarm_effects:11 "- ไม่สามารถมีส่วนร่วมใน §Yการทูต§! กับจักรวรรดิอื่น!\n- ไม่สามารถเข้าถึง §Yตลาดกาแล็กติก§! ได้\n- มีข้ออ้าง §Y'ผู้หิวโหย'§! เพื่อทำสงครามกับจักรวรรดิอื่น\n- §Yประชากรต่างดาว§! จะถูกกิน\n- ได้รับ £society£ §Y$society_research$§! จากการกิน £pop£ ประชากรต่างดาว\n"
  civic_tooltip_devouring_swarm_lithoid_effects:2 "Cannot engage in §YDiplomacy§! with other empires!\nCannot access the §YGalactic Market§!\nCannot §YTerraform§! planets\nHas the §Y'Hunger'§! casus belli on all other empires\nHas the §Y'Consume World'§! planetary decision\n§YXeno Pops§! will always be eaten\nGains £society£ §Y$society_research$§! from eating Xeno £pop£ Pops"
- civic_tooltip_machine_servitor_effects:12 "Start the game with §Y5§! organic £pop£ Pops with £job_bio_trophy£ §Y$citizenship_organic_trophy$§! citizenship and §Y$living_standard_organic_trophy$§! living standard\nCan construct £building£ §Y$building_organic_sanctuary$§! Buildings that allow Bio-Trophies to produce £unity£ §YUnity§! instead of regular Machine Empire buildings such as the £building£ §Y$building_uplink_node$§!\n\nGrants access to the £building£ §Y$holding_organic_sanctuary$§! Holding"
+ civic_tooltip_machine_servitor_effects:12 "- เริ่มเกมด้วย §Y5§! £pop£ ประชากรสิ่งมีชีวิตที่มีพลเมือง £job_bio_trophy£ §Y$citizenship_organic_trophy$§! และมาตรฐานความเป็นอยู่แบบ §Y$living_standard_organic_trophy$§!\n- สามารถร้าง £building£ §Y$building_organic_sanctuary$§! ที่จะทำให้ประชากรไบโอ-โทรฟีสามารถผลิต £unity£ §Yเอกภาพ§! แทนที่จะเป็นสิ่งปลูกสร้างปกติของจักรวรรดิเครื่องจักร อย่างเช่น £building£ §Y$building_uplink_node$§!\n\n- ให้สิทธิ์เข้าถึงสิ่งปลูกสร้าง £building£ §Y$holding_organic_sanctuary$§!"
  civic_tooltip_machine_terminator_effects:13 "- ดาวที่เป็นศูนย์กลางจักรวรรดิตอนเริ่มเป็น §Yโลกความตาย§!\n- ไม่สามารถมีส่วนร่วมใน §Yการทูต§! กับเผ่าพันธุ์สิ่งมีชีวิต!\n- ไม่สามารถเข้าถึง §Yตลาดกาแล็กติก§! ได้\n- มีข้ออ้าง §Y'การชำระล้าง'§! เพื่อทำสงครามกับเผ่าพันธุ์สิ่งมีชีวิต\n- §Yกวาดล้าง§! £pop£ ประชากรสิ่งมีชีวิต\n- ได้รับ £unity£ §Yเอกภาพ§! จากการกวาดล้าง £pop£ ประชากรสิ่งมีชีวิต\n- อาจใช้การทิ้งระเบิดแบบ §Y$bombardment_armageddon$§!\n"
  civic_tooltip_machine_assimilator_effects:7 "- เริ่มเกมด้วย §Y10§! £pop£ ประชากรไซบอร์กและสามารถ §Yทำการเปลี่ยน§! สิ่งมีชีวิตให้เป็นไซบอร์กได้\n- การเปลี่ยน £pop£ ประชากรสิ่งมีชีวิตจะสร้าง £unity£ §Yเอกภาพ§! และ £society£ §Yการวิจัยด้านสังคม§! เล็กน้อย\n- ประชากร £pop£ ที่ไม่ใช่สิ่งมีชีวิตที่จะเปลี่ยนจะ §Yถูกกวาดล้าง§! โดยอัตโนมัติ\n- มีข้ออ้าง §Y'การเปลี่ยนให้เหมือนหรือคล้ายกัน'§! เพื่อทำสงครามกับจักรวรรดิอื่น\n- ลด §Yทัศนคติ§! ของจักรวรรดิอื่นๆเกือบทั้งหมด\n- สามารถเข้าถึงการยกระดับสาย §Yไซเบอร์เนติก§! ได้"
  civic_tooltip_post_apocalyptic_effects:5 "- ดาวที่เป็นศูนย์กลางจักรวรรดิตอนเริ่มเป็น §Hโลกความตาย§!\n- ได้รับคุณลักษณะ §H$trait_survivor$§! ซึ่งทำให้:\n     การอยู่อาศัยได้ในโลกความตาย: §G+70%§!\n     อายุของผู้นำ: §G+10§! ปี"
@@ -8328,7 +8328,7 @@
  civic_tooltip_crafters_effects:2 "£job_artisan£ §Y$job_artisan_plural$§! are replaced with £job_artificer£ §Y$job_artificer_plural$§!.\n§Y$job_artificer_plural$§! produce §G7§! £consumer_goods£ §Y$consumer_goods$§! and §Y2§! £trade_value£ §YTrade Value§!.\nEvery §Y3§! §HIndustrial Districts§! grant §G1§! £building£ §YBuilding Slot§!, except on Habitats."
  civic_tooltip_parliamentary_system_effects:0 "กลุ่มการเมืองต่างๆจะก่อตัวขึ้นในจักรวรรดิของคุณหลังจากเกมเริ่มได้ไม่นาน"
  civic_tooltip_pompous_purists_effects:0 "Can only engage in §YDiplomacy§! with other empires if they are the proposer."
- civic_tooltip_efficient_bureaucracy_effects:0 "§Y$job_bureaucrat_plural_with_icon$§! and £job_priest£ §Y$job_priest_plural$§! provide §Y£mod_country_edict_fund_add£ $MOD_COUNTRY_EDICT_FUND_ADD$§! scaling with their $r_unity$ production."
+ civic_tooltip_efficient_bureaucracy_effects:0 "§Y$job_bureaucrat_plural_with_icon$§! และ £job_priest£ §Y$job_priest_plural$§! ทำให้ §Y£mod_country_edict_fund_add£ $MOD_COUNTRY_EDICT_FUND_ADD$§! ปรับขนาดตามการผลิต $r_unity$ ของพวกเขา (£job_bureaucrat£, £job_priest£)"
  requires_xenophile:0 "$TRIGGER_FAIL$$civic_tooltip_xenophile$"
  requires_xeno_species:0 "$TRIGGER_FAIL$ต้องมีประชากรต่างดาวอย่างน้อย §Y1§! £pop£ อาศัยอยู่ในจักรวรรดิของเรา"
  allow_crossbreeding:0 "ให้มีการผสมข้ามสายพันธุ์ระหว่างสิ่งมีชีวิตต่างๆที่อาศัยอยู่บนดาวเคราะห์เดียวกันโดยให้โบนัส §Y$MOD_POP_GROWTH_SPEED$§! เป็น §G20%§! โดยต้องมีประชากรอย่างน้อย §Y2§! เผ่าพันธุ์ นอกจากนี้การผสมข้ามพันธุ์จะทำให้เกิด §Yลูกครึ่ง§! โดยรูปร่างหน้าตาของพวกเขาจะนำมาจากพ่อแม่ และคุณลักษณะคือ §Yแต้มคุณลักษณะสูงสุด +1§! และ §Yคุณลักษณะสูงสุด +1§!"
@@ -10067,9 +10067,9 @@
  feature_tech_automated_exploration:0 "$AUTO_EXPLORE_ORDER$"
  feature_tech_automated_exploration_desc:0 "$AUTO_EXPLORE_ORDER_DESC$"
  feature_bliss_standard:0 "สารเคมีแห่งความสุข"
- feature_bliss_standard_desc:0 "Allows us to set the §Yสารเคมีแห่งความสุข§! Living Standard."
+ feature_bliss_standard_desc:0 "สามารถกำหนดมาตรฐานความเป็นอยู่แบบ §Yสารเคมีแห่งความสุข§! ได้"
  feature_robots:0 "แรงงานหุ่นยนต์"
- feature_robots_desc:1 "Robots are relatively simple machines, capable of accepting verbal commands but possessing no true intelligence of their own.\n\n§EWith the §Y$tech_robotic_workers$§! technology, Robot Pops are only capable of £pop_cat_worker£ §Y$pop_cat_worker$ Jobs§!.§!"
+ feature_robots_desc:1 "หุ่นยนต์เป็นเครื่องจักรที่ค่อนข้างเรียบง่าย สามารถรับคำสั่งทางวาจาได้ แต่ไม่มีสติปัญญาที่แท้จริงในตัวเอง\n\n§Eด้วยเทคโนโลยี §Y$tech_robotic_workers$§! จะทำให้ ประชากรหุ่นยนต์ สามารถทำงานได้เฉพาะ £pop_cat_worker£ §Yงาน $pop_cat_worker$§! เท่านั้น§!"
  feature_droids:0 "แรงงานดรอยด์"
  feature_droids_desc:1 "Droids are a more complex variant of robot, often coming with limited self-awareness and pre-programmed personalities to better serve their masters.\n\n§EWith the §Y$tech_droid_workers$§! technology, Robot Pops are now also capable of £pop_cat_specialist£ §Y$pop_cat_specialist$ Jobs§!.\n\nSome complex £pop_cat_specialist£ §Y$pop_cat_specialist$ Jobs§! such as £job_researcher£ §YResearch§! can only be performed if AI is not outlawed.§!"
  feature_synths:0 "แรงงานจักรกลสังเคราะห์"
@@ -11421,8 +11421,8 @@
  option_prefix_18:0 "Option eighteen: "
  option_prefix_19:0 "Option nineteen: "
  option_prefix_20:0 "Option twenty: "
- MOD_VERSION:0 "Mod v0.67.0, Update 29/11/2022"
- MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\nHyper Relay -> ไฮเปอร์รีเลย์/เครื่องส่งยานความเร็วสูง\nQuantum Catapult -> เครื่องเหวี่ยงกองยานควอนตัม\nFallen Empire -> จักรวรรดิฟอลเล็น/ฟอลเล็นเอ็มไพร์/จักรวรรดิเก่าแก่ทรงพลัง\nSleeping Empire -> จักรวรรดิฟอลเล็น (สถานะ: หลับไหล)\nAwakened Empire -> จักรวรรดิฟอลเล็น (สถานะ: ตื่นขึ้น)\nPrecursor เดิมใช้(ผู้มาก่อน) -> เปลี่ยนเป็น(จักรวรรดิแรกเริ่ม/ประถมจักรวรรดิ/พรีเคอร์เซอร์)\nSubspace -> มิติย่อย อุโมงค์ย่อย ทางย่อย ทางลัดอวกาศย่อย§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
+ MOD_VERSION:0 "Mod v0.67.1, Update 30/01/2023"
+ MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n n/a§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
  MOD_TEST2DUMMY2:0 "dummy2"
