--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -138,23 +138,23 @@
  ACTION_OFFER_TRADE_DEAL_PROPOSAL_FAILED_ACTOR:0 "Our trade deal offer to §H[Recipient.GetName]§! was declined."
  ACTION_OFFER_TRADE_DEAL_PROPOSAL_FAILED_RECIPIENT:1 "The trade deal offer from §H[Actor.GetName]§! timed out and was auto-declined."
  MESSAGE_MAKE_RIVAL_TITLE:0 "$RIVALRY$"
- MESSAGE_RECALL_EMBASSY_TITLE:0 "Embassy Recalled"
+ MESSAGE_RECALL_EMBASSY_TITLE:0 "เรียกทูตกลับแล้ว"
  MESSAGE_END_RIVALRY_TITLE:0 "สิ้นสุดการเป็น$RIVALRY$"
- MESSAGE_EMBASSY_TITLE:1 "Establish Embassy"
+ MESSAGE_EMBASSY_TITLE:1 "ตั้งสถานทูต"
  MESSAGE_DECLARE_WAR_TITLE:0 "การประกาศสงคราม"
  MESSAGE_OFFER_PEACE_TITLE:0 "ข้อเสนอสงบศึก"
  MESSAGE_INVITE_TO_ALLIANCE_TITLE:0 "Alliance Invitation"
  MESSAGE_KICK_FROM_ALLIANCE_TITLE:0 "Alliance Member Kicked"
  MESSAGE_KICK_FROM_FEDERATION_TITLE:0 "Federation Member Kicked"
  MESSAGE_ASK_TO_JOIN_ALLIANCE_TITLE:0 "Join Alliance Request"
- MESSAGE_LEAVE_ALLIANCE_TITLE:0 "Alliance Member Left"
- DIPLO_ACTION_LEAVE_ALLIANCE_DESC:0 "The $COUNTRY|Y$ has left the $ALLIANCE|Y$"
- DIPLO_ACTION_LEAVE_FEDERATION_DESC:0 "The $COUNTRY|Y$ has left the $ALLIANCE|Y$"
+ MESSAGE_LEAVE_ALLIANCE_TITLE:0 "สมาชิกพันธมิตรออก"
+ DIPLO_ACTION_LEAVE_ALLIANCE_DESC:0 "$COUNTRY|Y$ ออกจาก $ALLIANCE|Y$"
+ DIPLO_ACTION_LEAVE_FEDERATION_DESC:0 "$COUNTRY|Y$ ออกจาก $ALLIANCE|Y$"
  MESSAGE_DEMAND_SUBJUGATION_TITLE:1 "ต้องการให้เป็นบริวาร(เมืองขึ้น)"
  MESSAGE_ASK_TO_BECOME_SUBJUGATED_TITLE:1 "Subjugation Request"
  MESSAGE_ASK_TO_BE_RELEASED_SUBJECT_TITLE:0 "Subject Release Request"
  MESSAGE_FORM_FEDERATION_TITLE:0 "คำขอจัดตั้งสหพันธ์"
- MESSAGE_INVITE_TO_FEDERATION_TITLE:0 "Federation Invitation"
+ MESSAGE_INVITE_TO_FEDERATION_TITLE:0 "คำเชิญของสหพันธ์"
  MESSAGE_ASK_TO_JOIN_FEDERATION_TITLE:0 "เข้าร่วมตามคำขอของสหพันธ์"
  MESSAGE_LEAVE_FEDERATION_TITLE:0 "ออกจากสหพันธ์"
  MESSAGE_OFFER_TRADE_DEAL_TITLE:0 "Trade Deal Offer"
@@ -181,7 +181,7 @@
  MESSAGE_BREAK_GUARANTEE_TITLE:0 "Guarantee Revoked"
  MESSAGE_SUPPORT_INDEPENDENCE_TITLE:0 "Independence Supported"
  MESSAGE_BREAK_SUPPORT_TITLE:0 "Support Revoked"
- MESSAGE_OPEN_BORDERS_TITLE:0 "Borders Opened"
+ MESSAGE_OPEN_BORDERS_TITLE:0 "เปิดพรมแดนแล้ว"
  MESSAGE_CLOSE_BORDERS_TITLE:0 "พรมแดนถูกปิด"
  ACTION_MAKE_RIVAL_NOTIFICATION:1 "§H[From.GetName]§! ได้ประกาศให้ §H[Root.GetName]§! เป็น §H$RIVAL$§! ของพวกเขา\n\nสิ่งนี้จะทำให้ความสัมพันธ์ทางการทูตของพวกเขาแย่ลงอย่างมาก"
  ACTION_END_RIVALRY_NOTIFICATION:2 "§H[From.GetName]§! ได้ยุติการเป็น $RIVALRY$ กับ §H[Root.GetName]§!\n\nพวกเขาอาจอยู่บนเส้นทางแห่งความสมานฉันท์"
