--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -581,8 +581,8 @@
  mod_country_federation_perks_unity_produces_add:0 "£unity£ เอกภาพต่อเดือน"
  mod_country_civics_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_civics_influence_upkeep_add:0 "Influence Upkeep"
- mod_country_ai_uprising_energy_produces_add:0 "Monthly £energy£ Energy Credits"
- mod_country_ai_uprising_minerals_produces_add:0 "Monthly £minerals£ Minerals"
+ mod_country_ai_uprising_energy_produces_add:0 "£energy£ เครดิตพลังงานรายเดือน"
+ mod_country_ai_uprising_minerals_produces_add:0 "£minerals£ แร่รายเดือน"
  mod_country_covenant_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_dessanu_volatile_motes_produces_add:0 "£volatile_motes£ ผงแร่ระเหย รายเดือน"
  mod_country_dessanu_exotic_gases_produces_add:0 "£exotic_gases£ ก๊าซแปลกประหลาด รายเดือน"
@@ -1254,7 +1254,7 @@
  atmospheric_hallucinogen_good_desc:0 "The air of this planet once contained a natural hallucinogen. Now, with the aid of massive filters, the effect has been diluted. This has reduced the benefits it once gave, but has also eliminated the negatives."
  lush_planet:0 "Lush"
  lush_planet_desc:0 "Life thrives here, the fauna is plentiful and the flora grows rapidly."
- bleak_planet:0 "Bleak"
+ bleak_planet:0 "เยือกเย็น"
  bleak_planet_desc:0 "Life struggles to survive here, and while some clings to a tenacious existence it is anemic and sickly."
  irradiated_planet:0 "Irradiated"
  irradiated_planet_desc:0 "Some long-ago calamity rendered this planet rather heavily irradiated."
@@ -1439,7 +1439,7 @@
  mod_AQUATIC_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (มีชีวิตอยู่ใต้น้ำ)"
  MOD_COUNTRY_SENSOR_RANGE_ADD:0 "ระยะเซ็นเซอร์ของจักรวรรดิ"
  MOD_SHIP_SENSOR_RANGE_ADD:0 "ระยะของเซ็นเซอร์"
- MOD_GOVERNMENT_ELECTION_YEARS_ADD:0 "Years between Elections"
+ MOD_GOVERNMENT_ELECTION_YEARS_ADD:0 "ปีระหว่างการเลือกตั้ง"
  MOD_GOVERNMENT_ELECTION_YEARS_MULT:0 "$MOD_GOVERNMENT_ELECTION_YEARS_ADD$"
  MOD_COUNTRY_IMMIGRATION_PULL_ADD:0 "ดึงการอพยพย้ายเข้าจักรวรรดิ"
  MOD_COUNTRY_IMMIGRATION_PULL_MULT:0 "$MOD_COUNTRY_IMMIGRATION_PULL_ADD$"
