--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -489,7 +489,7 @@
  holding_noble_vacation_homes_effect:0 "Each $holding_noble_vacation_homes$ grants §G+2§! £stability£ stability in the Overlord's capital."
  holding_dread_outpost:0 "Dread Outpost"
  holding_dread_outpost_desc:0 "The Dread Outpost is an arcane structure that produces unholy reanimated armies while sending back insidious data to this planet's Overlord."
- holding_communal_housing_outreach:0 "Communal Housing Outreach"
+ holding_communal_housing_outreach:0 "ที่อยู่อาศัยของชุมชนที่แผ่ออกไป"
  holding_communal_housing_outreach_desc:0 "Everyone is entitled to a home, which is why the Ovelord have extended their Communal Housing Project to this planet. This serves as a great forum for teaching the inhabitants the value of egalitarianism."
  holding_idyllic_bloom:0 "Gaia Seeder Outpost"
  holding_idyllic_bloom_desc:0 "Hyper-advanced terraforming techniques mastered by the Overlord are housed in this structure. After being introduced to the planet, it will take a decade to finish its world-changing work."
@@ -498,15 +498,15 @@
  holding_reemployment_center:0 "Reemployment Center"
  holding_reemployment_center_desc:1 "Never leave a resource unexploited, even if that resource is the Subject's dead. With the Reemployment Center, the Overlord can ensure that the Subject's planets are always filled with employees even though the quality of work might vary."
  holding_reemployment_center_effect:0 "\nA new £pop£ §YZombie Pop§! will be reanimated on §Y[Planet.reemployment_center_timer]§!"
- holding_recruitment_office:0 "Recruitment Office"
+ holding_recruitment_office:0 "สำนักงานสรรหาคน"
  holding_recruitment_office_desc:0 "Everyone must do their part. That is why the Overlord is offering military training in exchange for a tour in their fleet. Service guarantees citizenship."
  MESSAGE_OVERLORD_RECRUIT_TITLE:0 "Tour of Duty Completed"
  MESSAGE_OVERLORD_RECRUIT_DESC:0 "After finishing their tour of duty, the §Y[moving_pop.GetSpeciesNamePlural]§! joining us have decided to stay on $PLANET|Y$. Our subject is not pleased, but they cannot decide over our citizens."
- holding_park_ranger_lodge:0 "Ranger Lodge"
+ holding_park_ranger_lodge:0 "บ้านพักเรนเจอร์"
  holding_park_ranger_lodge_desc:0 "The Overlord has an interest in co-existing with nature and wishes to spread this joy to its Vassal. To ensure that there always is at least some nature left to enjoy."
  no_free_district_for_ranger_lodge:0 "$TRIGGER_FAIL$§RNo untouched nature remains on this planet for us to protect.§!"
  blocker_tied_to_ranger_lodge:0 "$TRIGGER_FAIL$§RThis blocker will remain as long as the §Y$holding_park_ranger_lodge$§! Holding exists.§!"
- holding_tree_of_life_sapling:0 "Tree of Life Sapling"
+ holding_tree_of_life_sapling:0 "หน่อต้นอ่อนของต้นไม้แห่งชีวิต"
  holding_tree_of_life_sapling_desc:0 "The Overlord has existed with their Tree of Life for so long that they can no longer imagine life without it. Now, they want to share the same opportunity with their vassals."
  holding_franchise_headquarters:0 "Franchise Headquarters"
  holding_franchise_headquarters_desc:0 "These offices allow Corporate Management to realign the Subsidiary's interests with that of their Overlord through mandatory planet-wide training and team-building exercises."
