--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -192,9 +192,9 @@
  IMPERIALIST_FLEET_USAGE_HIGH:0 "High Naval Capacity Usage"
  IMPERIALIST_FLEET_USAGE_NOT_HIGH:0 "$IMPERIALIST_FLEET_USAGE_HIGH$"
  IMPERIALIST_FLEET_USAGE_HIGH_DESC:0 "Building our fleet out to our empire's capacity will please the [Root.GetName]."
- IMPERIALIST_FLEET_USAGE_LOW:0 "Low Naval Capacity Usage"
+ IMPERIALIST_FLEET_USAGE_LOW:0 "ใช้ยานที่ต่ำกว่าขีดความสามารถ"
  IMPERIALIST_FLEET_USAGE_NOT_LOW:0 "$IMPERIALIST_FLEET_USAGE_LOW$"
- IMPERIALIST_FLEET_USAGE_LOW_DESC:0 "Maintaining a fleet well below our empire's capacity will significantly displease the [Root.GetName]."
+ IMPERIALIST_FLEET_USAGE_LOW_DESC:0 "การบำรุงรักษากองยานที่ต่ำกว่าขีดความสามารถของจักรวรรดิเราจะทำให้ [Root.GetName] ไม่พอใจอย่างมาก"
  ISOLATIONIST_PHILOSOPHY:0 "การป้องกันที่แข็งแกร่ง"
  ISOLATIONIST_PHILOSOPHY_DESC:1 "การไม่อนุญาตให้ใช้ §Yสงครามที่ไม่จำกัด§! จะทำให้ [Root.GetName] พอใจ"
  ISOLATIONIST_NO_PHILOSOPHY:0 "$ISOLATIONIST_PHILOSOPHY$"
